# packetti

./: .gitignore  README.md
firmware/: CMakeLists.txt  main.cc  slip.cc  slip.h  usb.cc  usb.h
software/: go.mod  go.sum
software/cmd/packetticap/: .gitignore  main.go
software/pkg/packetti/: device.go  ifaces.go  link_types.go  slip.go
